styling bug where clues would be displayed in too small of a font

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -85,6 +85,7 @@
 
 .clue {
     color: black;
+    font-size: 50px;
 }
 
 .selected_square {
